Handle multiple yaml documents in a single file